--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="clase" id="clase">
             <h1>soystalker.xyz</h1>
 
-            <div class="line">
+            <div class="line" id="linea">
                 <p>⠀</p>
             </div>
             <p>Mantenimiento!</p>
