--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </a>
 
             <a target="_blank" href="https://discord.gg/UrWQJvCj5q" class="social-media-icon" id="icon2">
-                <i class='bx bx-bot'></i>
+                <i class='bx bxl-discord'></i>
             </a>
         </div>
     </main>
